test/tasty/neg/src-2/ConsumeTraitParams_fail.scala
package tastytest

object ConsumeTraitParams {
  def test = TraitParams.foo // TODO: we should support this
}
